--- a/wp-content/themes/TRN/templates/ProductDialog.html
+++ b/wp-content/themes/TRN/templates/ProductDialog.html
@@ -18,22 +18,26 @@
 					</div>
 					
 										
-				<md-button ng-click="pc.RequestProduct();" class="orange-btn">
-					<span ng-if="pc.RequestLoading"><i class="fa fa-spin fa-spinner"></i></span>
-					<span ng-if="!pc.RequestLoading">Request Product</span>
-				</md-button>
-				
-				<md-button href="{{ pc.generateLink(pc.product) }}" target="_blank" class="view-amazon-btn">View On Amazon</md-button>
+				<div class="col-md-6">
+					<md-button ng-click="pc.RequestProduct();" class="orange-btn">
+						<span ng-if="pc.RequestLoading"><i class="fa fa-spin fa-spinner"></i></span>
+						<span ng-if="!pc.RequestLoading">Request Product</span>
+					</md-button>
+					
+					<md-button href="{{ pc.generateLink(pc.product) }}" target="_blank" class="view-amazon-btn">View On Amazon</md-button>
 
-				<md-button ng-click="pc.ConfirmReview();" class="orange-btn">
-					<span ng-if="pc.ConfirmReviewLoading"><i class="fa fa-spin fa-spinner"></i></span>
-					<span ng-if="!pc.ConfirmReviewLoading">Confirm Review</span>
-				</md-button>
+					<md-button ng-click="pc.ConfirmReview();" class="orange-btn">
+						<span ng-if="pc.ConfirmReviewLoading"><i class="fa fa-spin fa-spinner"></i></span>
+						<span ng-if="!pc.ConfirmReviewLoading">Confirm Review</span>
+					</md-button>
+				</div>
 
 			
-			<div class="result-message {{ pc.RequestResultsClass }}" ng-if="pc.RequestResults">
-				{{ pc.RequestResults }}
-			</div>
+				<div class="col-md-6">
+					<div class="result-message {{ pc.RequestResultsClass }}" ng-if="pc.RequestResults">
+						{{ pc.RequestResults }}
+					</div>
+				</div>
 					
 			</div>
 		</div>
