--- a/wp-content/themes/TRN/templates/admin_buyer.html
+++ b/wp-content/themes/TRN/templates/admin_buyer.html
@@ -7,7 +7,7 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.3/angular-route.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/angular_material/1.0.5/angular-material.min.js"></script>
 <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.5/angular-material.min.css">
-<script>var basepath = "http://www.trustreviewnetwork.com/";var templatepath = 'http://www.trustreviewnetwork.com/wp-content/themes/TRN';</script>
+<script>var basepath = "http://localhost/";var templatepath = 'http://localhost/wp-content/themes/TRN';</script>
 <script src="%%TEMPLATE_Directory%%/js/admin.app.php"></script>
 <style type="text/css">
 button.md-small {
