--- a/wp-content/themes/TRN/templates/buyer-homepage.html
+++ b/wp-content/themes/TRN/templates/buyer-homepage.html
@@ -22,7 +22,7 @@
 						<md-card>
 							<md-card-title>
 								<md-card-title-text>
-									<span class="md-headline"> {{ product.product_name }}</span>
+									<span class="md-headline" ng-click="trnb.ViewProductDialog(product)"> {{ product.product_name }}</span>
 								</md-card-title-text>
 							</md-card-title>
 							<md-card-content>
