--- a/wp-content/themes/TRN/templates/Panels/TRN-logo.html
+++ b/wp-content/themes/TRN/templates/Panels/TRN-logo.html
@@ -1,1 +1,1 @@
-<a href="/" class="logo"><img src="%%TEMPLATE_Directory%%/templates/img/logo.png" /></a>
+<a href="/" class="logo"><img src="http://www.trustreviewnetwork.com/wp-content/themes/TRN/templates/img/logo.png" /></a>
