--- a/wp-content/themes/TRN/templates/admin.html
+++ b/wp-content/themes/TRN/templates/admin.html
@@ -14,7 +14,7 @@
 
 
 
-<script>var basepath = "http://localhost/";var templatepath = 'http://localhost/wp-content/themes/TRN/';</script>
+<script>var basepath = "http://dev.trustreviewnetwork.com/";var templatepath = 'http://dev.trustreviewnetwork.com/wp-content/themes/TRN/';</script>
 <script src="/wp-content/themes/TRN/js/newadmin/app.js"></script>
 <script src="/wp-content/themes/TRN/js/newadmin/controllers.js"></script>
 
